dark mode bug fixed on apartado 4

--- a/apartados/apartado 4/apartado4.css
+++ b/apartados/apartado 4/apartado4.css
@@ -5,8 +5,8 @@
 
 main {
     max-width: 1400px;
+    width: 100%;
     margin: 0 auto;
-    padding: 60px 0px;
 }
 
 .img-container {
